--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -12,6 +12,7 @@
   margin: 0px auto;
   align-items: center;
   padding: 265px 0px;
+  justify-content: center;
 }
 
 .landing_pg__img {
@@ -28,7 +29,6 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 34px;
-  width: 54%;
 }
 span.bg {
   color: #7615ba;
