--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -29,6 +29,30 @@
   flex-shrink: 0;
 }
 
+.top-active p:hover {
+  color: #7615ba;
+  transition: 1s;
+}
+button.Button {
+  display: none;
+  /* width: 177px; */
+  /* height: 33px; */
+  padding: 8.883px 39.975px;
+  justify-content: center;
+  align-items: center;
+  gap: 11.104px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #7615ba;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  margin-left: 490px;
+}
+
 .long-line {
   opacity: 0.2;
   background: #fff;
