--- a/src/pages/sign-up/signup.css
+++ b/src/pages/sign-up/signup.css
@@ -47,11 +47,12 @@
   font-weight: 700;
   line-height: normal;
 }
-form {
+.sign_up__form form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 39px;
+  width: 150%;
 }
 
 .form-group {
