--- a/src/components/chatHero/chatHero.css
+++ b/src/components/chatHero/chatHero.css
@@ -6,6 +6,7 @@
   display: inline-flex;
   align-items: flex-start;
   gap: 30px;
+  width: 100%;
 }
 
 .group-chats {
@@ -33,25 +34,38 @@
   line-height: 24px; /* 133.333% */
 }
 
-.group-personalh1:hover {
+.group-personal h1:hover {
   color: #7615ba;
   transition: 1s;
+}
+
+.group-title h2 {
+  color: #fff;
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 100% */
+  letter-spacing: 0.5px;
+  width: 100%;
 }
 .group-cubes {
   display: flex;
   width: 373px;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   gap: 32px;
+  justify-content: flex-start;
 }
 
 .cube {
   display: flex;
-  padding: 0px 10px;
+  padding: 0px 0px 10px 0px;
   flex-direction: column;
   align-items: flex-start;
   gap: 25px;
   border-bottom: 1px solid #ebebeb;
+  width: 100%;
 }
 
 .inner-cube {
@@ -62,9 +76,19 @@
 }
 
 .group-title {
-  width: 170px;
+  width: 100%;
   height: 56px;
   flex-shrink: 0;
+}
+
+.group-title p {
+  color: #fff;
+  font-family: Poppins;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.3px;
 }
 
 .detail1 {
@@ -81,6 +105,16 @@
   gap: 4px;
 }
 
+.detail1 p,
+.detail2 p {
+  color: #fff;
+  font-family: Poppins;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+}
+
 .line-chat {
   width: 1px;
   height: 828.01px;
@@ -92,7 +126,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 23px;
-  width: 45%;
+  /* width: 45%; */
 }
 
 .group-head {
@@ -100,7 +134,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 100%;
+  width: 80%;
   align-items: center;
 }
 
@@ -112,11 +146,49 @@
   flex-direction: column;
 }
 
+.name-heading h2 {
+  color: #fff;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 24px;
+}
+
+.name-heading p {
+  color: #fff;
+  font-family: Poppina;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+}
+
 .add-details {
   display: flex;
-  width: 187px;
+  /* width: 187px; */
   align-items: center;
   gap: 16px;
+}
+
+.add-details img {
+  cursor: pointer;
+}
+.add-details span {
+  display: flex;
+  padding: 10px 19.688px 10px 19px;
+  align-items: flex-start;
+  border-radius: 30px;
+  border: 2px solid #fff;
+  background: #f7f7f7;
+  color: #000;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 16px; /* 133.333% */
+  cursor: pointer;
 }
 
 .header-date {
@@ -125,6 +197,16 @@
   padding: 24px 0px 2px 0px;
   justify-content: center;
   align-items: center;
+}
+
+.header-date h3 {
+  color: #717171;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 16px; /* 145.455% */
 }
 
 .inner-texts {
@@ -137,13 +219,13 @@
 .main-inner-text {
   display: flex;
   align-items: flex-start;
+  gap: 10px;
 }
 .message {
   display: flex;
   padding-left: 0px;
   flex-direction: column;
   align-items: flex-start;
-  flex: 1 0 0;
 }
 
 .message-name {
@@ -152,7 +234,51 @@
   align-items: center;
   gap: 5px;
 }
+.message-name h1 {
+  color: #fff;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 22px; /* 137.5% */
+}
+
+.message-name span {
+  color: #717171;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px; /* 145.455% */
+}
 
 .message-content {
-  width: 564.981px;
+  width: 567px;
+}
+
+.message-content p {
+  color: #fff;
+  font-family: Poppins;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px; /* 160% */
+  width: 100%;
+}
+
+.main-group-chat input {
+  border-radius: 20px;
+  background: #fff;
+  display: flex;
+  padding: 9px 481px 9px 8px;
+  align-items: flex-start;
+}
+::placeholder {
+  color: #717171;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 137.5% */
 }
