--- a/src/components/popupAdmin/popupadmin.css
+++ b/src/components/popupAdmin/popupadmin.css
@@ -1,4 +1,4 @@
-.success {
+.success-admin {
   width: 500px;
   height: 500px;
   position: absolute;
@@ -42,6 +42,48 @@
 }
 
 .success-cont a {
+  display: flex;
+  padding: 8.883px 39.975px;
+  justify-content: center;
+  align-items: center;
+  gap: 11.104px;
+  border-radius: 13.325px;
+  background: #7615ba;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.failed-admin {
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.fail-main {
+  width: 100%;
+  border-radius: 20px;
+  background: #d9d9d9;
+}
+
+.fail-cont {
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 33px;
+}
+
+.fail-cont a {
   display: flex;
   padding: 8.883px 39.975px;
   justify-content: center;
