--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 56px;
+  gap: 52px;
 }
 
 .logo_name {
@@ -43,6 +43,11 @@ a {
   display: flex;
   align-items: center;
   gap: 20px;
+}
+
+ul li span:hover {
+  color: #7615ba;
+  transition: 1s;
 }
 
 .side_bar span {
