--- a/src/components/chatHero/chatHero.css
+++ b/src/components/chatHero/chatHero.css
@@ -157,7 +157,7 @@
 
 .name-heading p {
   color: #fff;
-  font-family: Poppina;
+  font-family: Poppins;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
