--- a/src/components/upgradeHero/upgradeHero.css
+++ b/src/components/upgradeHero/upgradeHero.css
@@ -1,16 +1,16 @@
 .upgrade-hero-cont {
   width: 100%;
   display: inline-flex;
-  /* height: 661px; */
+  /* height: 50%; */
   align-items: flex-start;
   gap: 30px;
   flex-shrink: 0;
 }
 
 .upgrade-main {
+  height: 550px;
   display: flex;
   width: 27%;
-  /* height: 100%; */
   padding: 25px;
   flex-direction: column;
   align-items: center;
