Added connect wallet

--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -1,5 +1,5 @@
 .landing__pg {
-  background: url("../../assets/space.jpeg");
+  background: url('../../assets/space.jpeg');
   width: 100%;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .landing_pg__img {
-  background: url("../../assets/eth_gif.gif");
+  background: url('../../assets/eth_gif.gif');
   background-repeat: no-repeat;
   background-size: cover;
   width: 509px;
@@ -110,4 +110,10 @@ ul .contact__btn a {
   border-radius: 32px;
   background: #7615ba;
   cursor: pointer;
+}
+.wallet_address {
+  margin-left: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  background: #7615ba;
 }
